# repoprover

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configs/: example.yaml
docs/: README.md  agents.md  architecture.md  build.md  git-worktree-tools.md  recording.md  safe-shell.md  shared-mathlib-worktrees.md
examples/toy_project/: CONTENTS.md  TestProject.lean  lakefile.lean  manifest.json  setup.sh
examples/toy_project/TestProject/: Basic.lean
examples/toy_project/TestProject/tex/: basics.tex
scripts/: count_tokens.py  plot_agent_efficiency.py
src/repoprover/: __init__.py  __main__.py  build.py  cli.py  coordinator.py  distributed.py  git_worktree.py  lean_checker.py  lean_utils.py  recording.py  safe_shell.py  stool.py  types.py  utils.py  viewer.html  viewer.py
src/repoprover/agents/: __init__.py  base.py  contributor.py  file_tools.py  git_worktree_tools.py  lean_tools.py  mathlib_tools.py  reviewers.py  shell_tools.py  tools.py
tests/: __init__.py  test_compaction.py  test_file_tools.py  test_git_worktree_tools.py  test_lean_checker.py  test_mathlib_tools.py  test_recording.py  test_safe_shell.py
